Добавил ссылки будущих страниц на текущие

--- a/404.html
+++ b/404.html
@@ -1935,7 +1935,7 @@
                                 Запрашиваемая страница не существует <br>
                                 Возможно, она устарела или была удалена
                             </p>
-                            <a class="rect-btn rect-btn--not-found white" href="#">
+                            <a class="rect-btn rect-btn--not-found white" href="https://t.me/ekromshop">
                                 Перейти в Telegram
                             </a>
                             <p class="not-found__subtext">
@@ -2015,7 +2015,7 @@
 
                             </div>
                             <div class="footer__contacts-item">
-                                <a class="round-btn round-btn--footer" href="#"
+                                <a class="round-btn round-btn--footer" href="./contacts.html"
                                     aria-label="Перейти на страницу с адресом компании">
                                     <img src="./img/icons/footer/footer-geo.svg" alt="">
                                 </a>
@@ -2023,7 +2023,7 @@
                                     <p>
                                         Адрес офиса
                                     </p>
-                                    <a class="footer__contacts-link" href="#">
+                                    <a class="footer__contacts-link" href="./contacts.html">
                                         г. Екатеринбург, Карла Либкнехта, 22, 419 офис, 4 этаж
                                     </a>
                                 </div>
@@ -2074,27 +2074,27 @@
                             </h4>
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./delivery.html">
                                         Доставка
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./guarantee.html">
                                         Гарантия
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./service.html">
                                         Сервисные центры
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./confidence.html">
                                         Конфиденциальности
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./return.html">
                                         Обмен и возврат товара
                                     </a>
                                 </li>
@@ -2106,27 +2106,27 @@
                             </h4>
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./about.html">
                                         О компании
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./contacts.html">
                                         Контакты
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./news.html">
                                         Новости
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./referal.html">
                                         Реферальная программа
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./feedback.html">
                                         Обратная связь
                                     </a>
                                 </li>
@@ -2163,7 +2163,7 @@
 
                         </div>
                         <div class="footer__contacts-item">
-                            <a class="round-btn round-btn--footer" href="#"
+                            <a class="round-btn round-btn--footer" href="./contacts.html"
                                 aria-label="Перейти на страницу с адресом компании">
                                 <img src="./img/icons/footer/footer-geo.svg" alt="">
                             </a>
@@ -2171,7 +2171,7 @@
                                 <p>
                                     Адрес офиса
                                 </p>
-                                <a class="footer__contacts-link" href="#">
+                                <a class="footer__contacts-link" href="./contacts.html">
                                     г. Екатеринбург, Карла Либкнехта, 22, 419 офис, 4 этаж
                                 </a>
                             </div>
@@ -2199,7 +2199,7 @@
                             </a>
                         </div>
                         <div class="footer__confidence">
-                            <a class="footer__confidence-link" href="#">
+                            <a class="footer__confidence-link" href="./confidence.html">
                                 Политика обработки персональных данных
                             </a>
                             <p>
@@ -2239,7 +2239,7 @@
                             <label for="questionCheckbox"></label>
                             <p>
                                 Отправляя форму Вы соглашаетесь с
-                                <a href="#">обработкой персональных данных и политикой конфеденциальности</a>
+                                <a href="./confidence.html">обработкой персональных данных и политикой конфеденциальности</a>
                             </p>
                         </div>
 
@@ -2258,7 +2258,7 @@
             <p class="popup-text">
                 Товар добавлен в список сравнения!
             </p>
-            <a class="popup-link" href="#">
+            <a class="popup-link" href="./compare.html">
                 Перейти в сравнение
                 <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -2386,7 +2386,7 @@
                 </form>
                 <div class="auth__footer">
                     <span>Уже есть аккаунт?</span>
-                    <a href="#">Войти</a>
+                    <a href="./personal.html">Войти</a>
                 </div>
             </div>
             <div class="auth__box auth__box--verify">
@@ -2417,7 +2417,7 @@
                 </form>
                 <div class="auth__footer">
                     <span>Уже есть аккаунт?</span>
-                    <a href="#">Войти</a>
+                    <a href="./personal.html">Войти</a>
                 </div>
             </div>
         </div>
