--- a/catalog.html
+++ b/catalog.html
@@ -2485,7 +2485,7 @@
 
                             </div>
                             <div class="footer__contacts-item">
-                                <a class="round-btn round-btn--footer" href="#"
+                                <a class="round-btn round-btn--footer" href="./contacts.html"
                                     aria-label="Перейти на страницу с адресом компании">
                                     <img src="./img/icons/footer/footer-geo.svg" alt="">
                                 </a>
@@ -2493,7 +2493,7 @@
                                     <p>
                                         Адрес офиса
                                     </p>
-                                    <a class="footer__contacts-link" href="#">
+                                    <a class="footer__contacts-link" href="./contacts.html">
                                         г. Екатеринбург, Карла Либкнехта, 22, 419 офис, 4 этаж
                                     </a>
                                 </div>
@@ -2544,27 +2544,27 @@
                             </h4>
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./delivery.html">
                                         Доставка
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./guarantee.html">
                                         Гарантия
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./service.html">
                                         Сервисные центры
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./confidence.html">
                                         Конфиденциальности
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./return.html">
                                         Обмен и возврат товара
                                     </a>
                                 </li>
@@ -2576,27 +2576,27 @@
                             </h4>
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./about.html">
                                         О компании
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./contacts.html">
                                         Контакты
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./news.html">
                                         Новости
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./referal.html">
                                         Реферальная программа
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./feedback.html">
                                         Обратная связь
                                     </a>
                                 </li>
@@ -2633,7 +2633,7 @@
 
                         </div>
                         <div class="footer__contacts-item">
-                            <a class="round-btn round-btn--footer" href="#"
+                            <a class="round-btn round-btn--footer" href="./contacts.html"
                                 aria-label="Перейти на страницу с адресом компании">
                                 <img src="./img/icons/footer/footer-geo.svg" alt="">
                             </a>
@@ -2641,7 +2641,7 @@
                                 <p>
                                     Адрес офиса
                                 </p>
-                                <a class="footer__contacts-link" href="#">
+                                <a class="footer__contacts-link" href="./contacts.html">
                                     г. Екатеринбург, Карла Либкнехта, 22, 419 офис, 4 этаж
                                 </a>
                             </div>
@@ -2669,7 +2669,7 @@
                             </a>
                         </div>
                         <div class="footer__confidence">
-                            <a class="footer__confidence-link" href="#">
+                            <a class="footer__confidence-link" href="./confidence.html">
                                 Политика обработки персональных данных
                             </a>
                             <p>
@@ -2709,7 +2709,7 @@
                             <label for="questionCheckbox"></label>
                             <p>
                                 Отправляя форму Вы соглашаетесь с
-                                <a href="#">обработкой персональных данных и политикой конфеденциальности</a>
+                                <a href="./confidence.html">обработкой персональных данных и политикой конфеденциальности</a>
                             </p>
                         </div>
 
@@ -2728,7 +2728,7 @@
             <p class="popup-text">
                 Товар добавлен в список сравнения!
             </p>
-            <a class="popup-link" href="#">
+            <a class="popup-link" href="./compare.html">
                 Перейти в сравнение
                 <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
