--- a/personal.html
+++ b/personal.html
@@ -1921,7 +1921,7 @@
                 <div class="container">
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs__item breadcrumbs__item--home">
-                            <a href="#">
+                            <a href="./index.html">
                                 <svg width="15" height="15" viewBox="0 0 15 16" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -1975,10 +1975,10 @@
                                 <a class="personal__aside-item-link" href="./cart.html">
                                     Корзина
                                 </a>
-                                <a class="personal__aside-item-link" href="#">
+                                <a class="personal__aside-item-link" href="./bonuses.html">
                                     Личные бонусы
                                 </a>
-                                <a class="personal__aside-item-link" href="#">
+                                <a class="personal__aside-item-link" href="./favorites.html">
                                     Избранные товары
                                 </a>
                                 <button class="rect-btn rect-btn--personal-quit blue">
@@ -1993,7 +1993,7 @@
                                             Товар месяца
                                         </h4>
                                     </div>
-                                    <a class="promo-box__content" href="#">
+                                    <a class="promo-box__content" href="./product.html">
                                         <div class="promo-box__img">
                                             <img src="" alt="">
                                         </div>
@@ -2141,7 +2141,7 @@
                                         Корзина
                                     </p>
                                 </a>
-                                <a class="personal__tile-link" href="#">
+                                <a class="personal__tile-link" href="./favorites.html">
                                     <svg width="100" height="100" viewBox="0 0 92 92" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M46.0003 88.3191L7.78884 50.0806C2.77035 44.9282 0 38.1537 0 31.0138C0 15.9744 12.2055 3.76025 27.2341 3.76025C33.977 3.76025 40.7207 6.68966 46.0003 11.842C51.2799 6.68966 58.0227 3.76025 64.7656 3.76025C79.7943 3.76025 91.9997 15.9744 91.9997 31.0138C91.9997 38.1798 89.2294 44.9543 84.2117 50.0806L46.0003 88.3191ZM27.2341 7.94479C14.5057 7.94479 4.18156 18.2762 4.18156 31.0138C4.18156 37.0817 6.53384 42.8095 10.7682 47.1511L46.0003 82.4082L81.2583 47.1251C85.4919 42.8095 87.8182 37.0817 87.8182 31.0138C87.8182 18.3023 77.4941 7.94479 64.7656 7.94479C58.5457 7.94479 52.2469 10.9784 47.5684 16.2618L46.0003 18.0142L44.4321 16.2618C39.7536 10.9784 33.4548 7.94479 27.2341 7.94479Z"
@@ -2151,7 +2151,7 @@
                                         Избранные товары
                                     </p>
                                 </a>
-                                <a class="personal__tile-link" href="#">
+                                <a class="personal__tile-link" href="./contacts.html">
                                     <svg width="100" height="100" viewBox="0 0 92 92" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <g clip-path="url(#clip0_656_6193)">
                                             <path
@@ -2174,7 +2174,7 @@
                                         Контакты
                                     </p>
                                 </a>
-                                <a class="personal__tile-link" href="#">
+                                <a class="personal__tile-link" href="./bonuses.html">
                                     <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M58.3332 29.1665H43.7498C42.5998 29.1665 41.6665 30.0998 41.6665 31.2498V58.3332H31.2498C30.0998 58.3332 29.1665 59.2665 29.1665 60.4165C29.1665 61.5665 30.0998 62.4998 31.2498 62.4998H41.6665V68.7498C41.6665 69.8998 42.5998 70.8332 43.7498 70.8332C44.8998 70.8332 45.8332 69.8998 45.8332 68.7498V62.4998H56.2498C57.3998 62.4998 58.3332 61.5665 58.3332 60.4165C58.3332 59.2665 57.3998 58.3332 56.2498 58.3332H45.8332V54.1665H58.3332C65.2248 54.1665 70.8332 48.5582 70.8332 41.6665C70.8332 34.7748 65.2248 29.1665 58.3332 29.1665ZM58.3332 49.9998H45.8332V33.3332H58.3332C62.929 33.3332 66.6665 37.0707 66.6665 41.6665C66.6665 46.2623 62.929 49.9998 58.3332 49.9998Z"
@@ -2287,7 +2287,7 @@
 
                             </div>
                             <div class="footer__contacts-item">
-                                <a class="round-btn round-btn--footer" href="#"
+                                <a class="round-btn round-btn--footer" href="./contacts.html"
                                     aria-label="Перейти на страницу с адресом компании">
                                     <img src="./img/icons/footer/footer-geo.svg" alt="">
                                 </a>
@@ -2295,7 +2295,7 @@
                                     <p>
                                         Адрес офиса
                                     </p>
-                                    <a class="footer__contacts-link" href="#">
+                                    <a class="footer__contacts-link" href="./contacts.html">
                                         г. Екатеринбург, Карла Либкнехта, 22, 419 офис, 4 этаж
                                     </a>
                                 </div>
@@ -2305,9 +2305,7 @@
                     <nav class="footer__nav">
                         <div class="footer__nav-box">
                             <h4 class="footer__nav-title">
-                                <a href="#">
-                                    Каталог
-                                </a>
+                                Каталог
                             </h4>
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
@@ -2336,7 +2334,7 @@
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link footer__nav-link--show" href="#">
+                                    <a class="footer__nav-link footer__nav-link--show" href="./catalog.html">
                                         Показать все
                                     </a>
                                 </li>
@@ -2344,33 +2342,31 @@
                         </div>
                         <div class="footer__nav-box">
                             <h4 class="footer__nav-title">
-                                <a href="#">
-                                    Информация
-                                </a>
+                                Информация
                             </h4>
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./delivery.html">
                                         Доставка
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./guarantee.html">
                                         Гарантия
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./service.html">
                                         Сервисные центры
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./confidence.html">
                                         Конфиденциальности
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./return.html">
                                         Обмен и возврат товара
                                     </a>
                                 </li>
@@ -2378,39 +2374,81 @@
                         </div>
                         <div class="footer__nav-box">
                             <h4 class="footer__nav-title">
-                                <a href="#">
-                                    О Нас
-                                </a>
+                                О Нас
                             </h4>
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./about.html">
                                         О компании
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./contacts.html">
                                         Контакты
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./news.html">
                                         Новости
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./referal.html">
                                         Реферальная программа
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./feedback.html">
                                         Обратная связь
                                     </a>
                                 </li>
                             </ul>
                         </div>
                     </nav>
+                    <div class="footer__contacts">
+                        <div class="footer__contacts-item">
+                            <a class="round-btn round-btn--footer" href="tel:+73433799868" aria-label="Позвонить">
+                                <img src="./img/icons/footer/footer-tel.svg" alt="">
+                            </a>
+                            <div class="footer__contacts-box">
+                                <p>
+                                    Телефон
+                                </p>
+                                <a class="footer__contacts-link" href="tel:+73433799868">
+                                    8(343)379-98-68
+                                </a>
+                            </div>
+                        </div>
+                        <div class="footer__contacts-item">
+                            <a class="round-btn round-btn--footer" href="mailto:sale@ekrom.ru"
+                                aria-label="Написать письмо на почту">
+                                <img src="./img/icons/footer/footer-mail.svg" alt="">
+                            </a>
+                            <div class="footer__contacts-box">
+                                <p>
+                                    Почта
+                                </p>
+                                <a class="footer__contacts-link" href="mailto:sale@ekrom.ru">
+                                    sale@ekrom.ru
+                                </a>
+                            </div>
+
+                        </div>
+                        <div class="footer__contacts-item">
+                            <a class="round-btn round-btn--footer" href="./contacts.html"
+                                aria-label="Перейти на страницу с адресом компании">
+                                <img src="./img/icons/footer/footer-geo.svg" alt="">
+                            </a>
+                            <div class="footer__contacts-box">
+                                <p>
+                                    Адрес офиса
+                                </p>
+                                <a class="footer__contacts-link" href="./contacts.html">
+                                    г. Екатеринбург, Карла Либкнехта, 22, 419 офис, 4 этаж
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="footer__bottom">
                         <div class="footer__socials">
                             <a class="footer__socials-link round-btn round-btn--footer vk"
@@ -2433,7 +2471,7 @@
                             </a>
                         </div>
                         <div class="footer__confidence">
-                            <a class="footer__confidence-link" href="#">
+                            <a class="footer__confidence-link" href="./confidence.html">
                                 Политика обработки персональных данных
                             </a>
                             <p>
@@ -2692,7 +2730,7 @@
                             <label for="questionCheckbox"></label>
                             <p>
                                 Отправляя форму Вы соглашаетесь с
-                                <a href="#">обработкой персональных данных и политикой конфеденциальности</a>
+                                <a href="./confidence.html">обработкой персональных данных и политикой конфеденциальности</a>
                             </p>
                         </div>
 
