--- a/product.html
+++ b/product.html
@@ -2542,17 +2542,17 @@
                                                 Способы получения заказа
                                             </h5>
                                             <div class="option pickup">
-                                                <a href="#">Самовывоз за 15 минут</a>
+                                                <a href="./delivery.html">Самовывоз за 15 минут</a>
                                                 <p>с нашего склада - бесплатно</p>
                                             </div>
                                             <div class="option delivery">
-                                                <a href="#">Доставка до дома</a>
+                                                <a href="./delivery.html">Доставка до дома</a>
                                                 <p>
                                                     При заказе от 20 000 ₽ доставка по Екатеринбургу - бесплатно
                                                 </p>
                                             </div>
                                         </div>
-                                        <a class="rect-btn rect-btn--brand blue" href="#">
+                                        <a class="rect-btn rect-btn--brand blue" href="./brands.html">
                                             Все товары бренда&nbsp;<span>LEX</span>
                                         </a>
                                     </div>
@@ -2711,7 +2711,7 @@
                         <a class="product-box__brand-link" href="">
                             <img class="lazyload" data-src="./img/brands/lex.webp" alt="">
                         </a>
-                        <a class="rect-btn rect-btn--brand blue" href="#">
+                        <a class="rect-btn rect-btn--brand blue" href="./brands.html">
                             Все товары бренда
                         </a>
                     </div>
@@ -2836,7 +2836,7 @@
                                 </h4>
                                 <ul class="product-info__action-list">
                                     <li class="product-info__action">
-                                        <a class="rect-btn rect-btn--product-info-action blue" href="#">Вытяжка LEX в
+                                        <a class="rect-btn rect-btn--product-info-action blue" href="./action.html">Вытяжка LEX в
                                             подарок!</a>
                                     </li>
                                 </ul>
@@ -3193,7 +3193,7 @@
 
                     <div class="product-info__inner guarantee skeleton">
 
-                        <a class="product-info__guarantee-item" href="#">
+                        <a class="product-info__guarantee-item" href="./guarantee.html">
                             <div class="product-info__guarantee-text">
                                 <h4>
                                     14 дней на обмен и возврат
@@ -3205,7 +3205,7 @@
                             <img src="./img/product-guarantee/1.png" alt="">
                         </a>
 
-                        <a class="product-info__guarantee-item" href="#">
+                        <a class="product-info__guarantee-item" href="./guarantee.html">
                             <div class="product-info__guarantee-text">
                                 <h4 class="product-info__guarantee-title">
                                     Бесплатная
@@ -3287,7 +3287,7 @@
                                     </div>
 
                                     <div class="product-card__name skeleton">
-                                        <a class="product-card__name" href="#">
+                                        <a class="product-card__name" href="./product.html">
                                             Мойка кухонная Dr.Gans Берта-760
                                         </a>
                                     </div>
@@ -3566,7 +3566,7 @@
                                     </div>
 
                                     <div class="product-card__name skeleton">
-                                        <a class="product-card__name" href="#">
+                                        <a class="product-card__name" href="./product.html">
                                             Мойка кухонная Dr.Gans Берта-760
                                         </a>
                                     </div>
@@ -3845,7 +3845,7 @@
                                     </div>
 
                                     <div class="product-card__name skeleton">
-                                        <a class="product-card__name" href="#">
+                                        <a class="product-card__name" href="./product.html">
                                             Мойка кухонная Dr.Gans Берта-760
                                         </a>
                                     </div>
@@ -4124,7 +4124,7 @@
                                     </div>
 
                                     <div class="product-card__name skeleton">
-                                        <a class="product-card__name" href="#">
+                                        <a class="product-card__name" href="./product.html">
                                             Мойка кухонная Dr.Gans Берта-760
                                         </a>
                                     </div>
@@ -4403,7 +4403,7 @@
                                     </div>
 
                                     <div class="product-card__name skeleton">
-                                        <a class="product-card__name" href="#">
+                                        <a class="product-card__name" href="./product.html">
                                             Мойка кухонная Dr.Gans Берта-760
                                         </a>
                                     </div>
@@ -4681,7 +4681,7 @@
 
                             </div>
                             <div class="footer__contacts-item">
-                                <a class="round-btn round-btn--footer" href="#"
+                                <a class="round-btn round-btn--footer" href="./contacts.html"
                                     aria-label="Перейти на страницу с адресом компании">
                                     <img src="./img/icons/footer/footer-geo.svg" alt="">
                                 </a>
@@ -4689,7 +4689,7 @@
                                     <p>
                                         Адрес офиса
                                     </p>
-                                    <a class="footer__contacts-link" href="#">
+                                    <a class="footer__contacts-link" href="./contacts.html">
                                         г. Екатеринбург, Карла Либкнехта, 22, 419 офис, 4 этаж
                                     </a>
                                 </div>
@@ -4699,9 +4699,7 @@
                     <nav class="footer__nav">
                         <div class="footer__nav-box">
                             <h4 class="footer__nav-title">
-                                <a href="#">
-                                    Каталог
-                                </a>
+                                Каталог
                             </h4>
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
@@ -4730,7 +4728,7 @@
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link footer__nav-link--show" href="#">
+                                    <a class="footer__nav-link footer__nav-link--show" href="./catalog.html">
                                         Показать все
                                     </a>
                                 </li>
@@ -4738,33 +4736,31 @@
                         </div>
                         <div class="footer__nav-box">
                             <h4 class="footer__nav-title">
-                                <a href="#">
-                                    Информация
-                                </a>
+                                Информация
                             </h4>
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./delivery.html">
                                         Доставка
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./guarantee.html">
                                         Гарантия
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./service.html">
                                         Сервисные центры
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./confidence.html">
                                         Конфиденциальности
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./return.html">
                                         Обмен и возврат товара
                                     </a>
                                 </li>
@@ -4772,42 +4768,85 @@
                         </div>
                         <div class="footer__nav-box">
                             <h4 class="footer__nav-title">
-                                <a href="#">
-                                    О Нас
-                                </a>
+                                О Нас
                             </h4>
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./about.html">
                                         О компании
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./contacts.html">
                                         Контакты
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./news.html">
                                         Новости
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./referal.html">
                                         Реферальная программа
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link" href="#">
+                                    <a class="footer__nav-link" href="./feedback.html">
                                         Обратная связь
                                     </a>
                                 </li>
                             </ul>
                         </div>
                     </nav>
+                    <div class="footer__contacts">
+                        <div class="footer__contacts-item">
+                            <a class="round-btn round-btn--footer" href="tel:+73433799868" aria-label="Позвонить">
+                                <img src="./img/icons/footer/footer-tel.svg" alt="">
+                            </a>
+                            <div class="footer__contacts-box">
+                                <p>
+                                    Телефон
+                                </p>
+                                <a class="footer__contacts-link" href="tel:+73433799868">
+                                    8(343)379-98-68
+                                </a>
+                            </div>
+                        </div>
+                        <div class="footer__contacts-item">
+                            <a class="round-btn round-btn--footer" href="mailto:sale@ekrom.ru"
+                                aria-label="Написать письмо на почту">
+                                <img src="./img/icons/footer/footer-mail.svg" alt="">
+                            </a>
+                            <div class="footer__contacts-box">
+                                <p>
+                                    Почта
+                                </p>
+                                <a class="footer__contacts-link" href="mailto:sale@ekrom.ru">
+                                    sale@ekrom.ru
+                                </a>
+                            </div>
+
+                        </div>
+                        <div class="footer__contacts-item">
+                            <a class="round-btn round-btn--footer" href="./contacts.html"
+                                aria-label="Перейти на страницу с адресом компании">
+                                <img src="./img/icons/footer/footer-geo.svg" alt="">
+                            </a>
+                            <div class="footer__contacts-box">
+                                <p>
+                                    Адрес офиса
+                                </p>
+                                <a class="footer__contacts-link" href="./contacts.html">
+                                    г. Екатеринбург, Карла Либкнехта, 22, 419 офис, 4 этаж
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="footer__bottom">
                         <div class="footer__socials">
-                            <a class="footer__socials-link round-btn round-btn--footer vk" href="https://vk.com/ekromshop" target="_blank"
+                            <a class="footer__socials-link round-btn round-btn--footer vk"
+                                href="https://vk.com/ekromshop" target="_blank"
                                 aria-label="Перейти в ВК сообщество компании">
                                 <img src="./img/icons/footer/vk.svg" alt="">
                             </a>
@@ -4815,7 +4854,8 @@
                                 aria-label="Перейти на YouTube-канал компании">
                                 <img src="./img/icons/footer/youtube.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer telegram" href="https://t.me/ekromshop" target="_blank"
+                            <a class="footer__socials-link round-btn round-btn--footer telegram"
+                                href="https://t.me/ekromshop" target="_blank"
                                 aria-label="Перейти в телеграм-канал компании">
                                 <img src="./img/icons/footer/telegram.svg" alt="">
                             </a>
@@ -4825,7 +4865,7 @@
                             </a>
                         </div>
                         <div class="footer__confidence">
-                            <a class="footer__confidence-link" href="#">
+                            <a class="footer__confidence-link" href="./confidence.html">
                                 Политика обработки персональных данных
                             </a>
                             <p>
@@ -4865,7 +4905,7 @@
                             <label for="questionCheckbox"></label>
                             <p>
                                 Отправляя форму Вы соглашаетесь с
-                                <a href="#">обработкой персональных данных и политикой конфеденциальности</a>
+                                <a href="./confidence.html">обработкой персональных данных и политикой конфеденциальности</a>
                             </p>
                         </div>
 
@@ -5696,17 +5736,17 @@
                                         Способы получения заказа
                                     </h5>
                                     <div class="option pickup">
-                                        <a href="#">Самовывоз за 15 минут</a>
+                                        <a href="./delivery.html">Самовывоз за 15 минут</a>
                                         <p>с нашего склада - бесплатно</p>
                                     </div>
                                     <div class="option delivery">
-                                        <a href="#">Доставка до дома</a>
+                                        <a href="./delivery.html">Доставка до дома</a>
                                         <p>
                                             При заказе от 20 000 ₽ доставка по Екатеринбургу - бесплатно
                                         </p>
                                     </div>
                                 </div>
-                                <a class="rect-btn rect-btn--brand blue" href="#">
+                                <a class="rect-btn rect-btn--brand blue" href="./brands.html">
                                     Все товары бренда&nbsp;<span>LEX</span>
                                 </a>
                             </div>
